--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 
 <h1>Wiadomość</h1>
 
+<form action="/titles" method="post">
+<input type = "text" name="title" placeholder="Place some title">
+<input type = "text" name="description" placeholder="Place some description">
+<button type="submit">Submit</button>
+
+</form>
 
 </body>
 
